[package]
name = "rocket"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "=0.4"
rocket_contrib = "0.4"
fastrand = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
postgres = { version = "0.19", features = [ "with-serde_json-1"] }